feat: updated registration form

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
-<h1>Welcome#index</h1>
+<h1>Enviorement <%= @meu_nome %></h1>
 <p><strong>Data:</strong><%= data_br(Date.today)%>
-<ul>
-    <li>
-        <%= link_to "Coin Registration", coins_path %>
-    </li>
-</ul>
+<%= render "menu"%>
+<p>
+    Você está em ambiente de <strong><%= ambiente_rails %></strong>
+</p>
