fix: corrected crud

--- a/app/views/coins/show.html.erb
+++ b/app/views/coins/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Descrition:</strong>
-  <%= @coin.descrition %>
+  <strong>Description:</strong>
+  <%= @coin.description %>
 </p>
 
 <p>
