--- a/app/views/welcome/_menu.html.erb
+++ b/app/views/welcome/_menu.html.erb
@@ -2,4 +2,7 @@
     <li>
         <%= link_to "Coin Registration", coins_path %>
     </li>
+    <li>
+        <%= link_to "Mining Types Registration", mining_types_path %>
+    </li>
 </ul>
