--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :descrition %>
-    <%= form.text_field :descrition %>
+    <%= form.label :description %>
+    <%= form.text_field :description %>
   </div>
 
   <div class="field">
