--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Descrition</th>
+      <th>Description</th>
       <th>Acronym</th>
       <th>Url image</th>
       <th colspan="3"></th>
@@ -15,7 +15,7 @@
   <tbody>
     <% @coins.each do |coin| %>
       <tr>
-        <td><%= coin.descrition %></td>
+        <td><%= coin.description %></td>
         <td><%= coin.acronym %></td>
         <td><%= image_tag coin.url_image, width:25, height:25 %></td>
         <td><%= link_to 'Show', coin %></td>
