--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -29,6 +29,11 @@
     <% end %>
   </div>
 
+  <div class="field">
+    <%= form.label :mining_type_id %>
+    <%= form.select("mining_type_id", @mining_type_options, { include_blank: 'Selecione' }) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
