--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<p><%= link_to 'Português', '/?locale=pt-BR' %></p>
+<p><%= link_to 'Inglês', '/?locale=en' %></p>
 <h1>Seja Bem-Vindo!</h1>
 <p>O Idioma usado nessa aplicação é: <strong><%= t('actual_locale') %> </strong></p>
 <p><strong>Data: </strong><%= l(Date.today) %></p>
