--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Coins</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th><%= @coins.human_attribute_name(:description) %></th>
