--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,7 @@
-<p><%= link_to 'Português', root_path(locale: 'pt-BR') %></p>
-<p><%= link_to 'Inglês', root_path(locale: 'en') %></p>
-<h1>Seja Bem-Vindo!</h1>
-<p>O Idioma usado nessa aplicação é: <strong><%= t('actual_locale') %> </strong></p>
-<p><strong>Data: </strong><%= l(Date.today) %></p>
-<p><strong><%= t('hello') %> </strong></p>
-<%= render "menu"%>
-<p>
-    Você está em ambiente de <strong><%= rails_env %></strong>
-</p>
-<p>
-  Eu sou uma variável de instência/sessão <strong><%= @meu_nome %></strong>
-</p>
+<div class="jumbotron">
+  <h1 class="display-4"><%= t('welcome') %></h1>
+  <p class="lead"><%= t('messages.welcome') %></p>
+  <hr class="my-4">
+  <p><%= t('messages.menu') %></p>
+  <%= render "menu" %>
+</div>
