--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -4,37 +4,36 @@
       <h2><%= pluralize(coin.errors.count, "error") %> prohibited this coin from being saved:</h2>
 
       <ul>
-      <% coin.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% coin.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: "form-control", placeholder: "Bitcoin" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :acronym %>
-    <%= form.text_field :acronym %>
+    <%= form.text_field :acronym, class: "form-control", placeholder: "BTC" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :url_image %>
-    <%= form.text_field :url_image %>
-    <% if coin.url_image %>
-      <td><%= image_tag coin.url_image, width:25, height:25 %></td>
-    <% end %>
+    <%= form.text_field :url_image, class: "form-control", placeholder: "http://img.ur/bitcoin.png" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :mining_type_id %>
-    <%= form.select("mining_type_id", @mining_type_options, { include_blank: 'Selecione' }) %>
+    <%= form.select("mining_type_id", @mining_type_options, { include_blank: 'Selecione...' }, class: "form-control") %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit nil, class: "btn btn-primary" %>
   </div>
 <% end %>
+
+</br>
