--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CryptoWallet</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>CrypoWallet</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'scaffolds', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <h1>CABEÇALHO - <%= params[:controller] %></h1>
-    <%= yield %>
-    <h1>RODAPÉ</h1>
-  </body>
-  <script>$.notify("Hello World!!!", "success")</script>
+<body>
+<div class="container-fluid">
+  <ul class="nav justify-content-end">
+    <li>
+      <%= link_to '[HOME]', root_path, class: "nav-link" %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Português', root_path(locale: 'pt-BR'), class: "nav-link" %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'English', root_path(locale: 'en'), class: "nav-link" %>
+    </li>
+  </ul>
+  <%= yield %>
+</div>
+</body>
 </html>
