--- a/app/views/welcome/_menu.html.erb
+++ b/app/views/welcome/_menu.html.erb
@@ -1,8 +1,2 @@
-<ul>
-    <li>
-        <%= link_to "Coin Registration", coins_path %>
-    </li>
-    <li>
-        <%= link_to "Mining Types Registration", mining_types_path %>
-    </li>
-</ul>
+<%= link_to "#{Coin.model_name.human}", coins_path, class: "btn btn-primary btn-lg", role: "button" %>
+<%= link_to "#{MiningType.model_name.human}", mining_types_path, class: "btn btn-primary btn-lg", role: "button" %>
